traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:8: error: ';' expected but 'else' found.
    } else {
      ^TraversalByLine:16: error: Missing closing brace `}' assumed here
} 
^